Interfaz crear empleados terminada

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GSP_RecursoHumano">
+        <activity android:name=".DetalleEmpleado"></activity>
+        <activity android:name=".CrearEmpleado" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
